Lots of edits to wording. Fixed jtml tables

--- a/src/aim4-shape-sensitivity/new-metrics.tex
+++ b/src/aim4-shape-sensitivity/new-metrics.tex
@@ -1,20 +1,23 @@
 \subsection{Introduction}
-Given the standard optimization algorithm's relatively poor performance (DIRECT \cite{jonesLipschitzianOptimizationLipschitz1993,floodAutomatedRegistration3D2018}) and the cost function ($L_{1}$-distance or Hamming Distance \cite{floodAutomatedRegistration3D2018}), this study first investigated whether a more robust image similarity representation could enhance performance (\cref{sec:image-similarity}).
-To facilitate the identification of global minima in this model-image registration challenge, several approaches for enhancing image similarity representation were explored.
+Given the relatively poor performance of the standard optimization algorithm (DIRECT \cite{jonesLipschitzianOptimizationLipschitz1993,floodAutomatedRegistration3D2018}) and the cost function ($L_{1}$-distance or Hamming Distance \cite{floodAutomatedRegistration3D2018}), this study initially investigated the potential for a more robust image similarity representation to enhance performance (\cref{sec:image-similarity}).
+The identification of global minima in this model-image registration challenge was facilitated by exploring several approaches to enhance image similarity representation.
 
-The initial approach involved enhancing the convexity of the problem.
-Under the current formulation, the cost reaches maximum error ($\sum I + P$) when the projection and the CNN have no overlap, irrespective of the projection's deviation, whether by 5 or 500 pixels.
-This issue necessitates a more nuanced error gradient.
+The first approach involved attempts to enhance the convexity of the problem.
+With the existing formulation, the cost was observed to reach maximum error ($\sum I + P$) when there was no overlap between the projection and the CNN, regardless of the projection's deviation, whether it be 5 or 500 pixels.
+This highlighted the need for a more nuanced error gradient.
 
-Secondly, an exploration into the perceptual psychology of shape was conducted \cite{attneaveInformationalAspectsVisual1954,attneaveQuantitativeStudyShape1956}.
-Since manual registration serves as the benchmark for ground-truth kinematics, understanding human perception of shape differences and overlaps is crucial.
+Secondly, an exploration of the perceptual psychology of shape was undertaken \cite{attneaveInformationalAspectsVisual1954,attneaveQuantitativeStudyShape1956}.
+Given that manual registration is considered the benchmark for ground-truth kinematics, an understanding of human perception of shape differences and overlaps was deemed crucial.
+Consultations with surgeons and engineers were conducted, providing invaluable insights into refining the registration approach, with an emphasis on identifying effective procedures and features.
 
-Consultations with surgeons and engineers provided invaluable insights for refining the registration approach with emphasis on effective procedures and features.
+Exploring the addition of new cost parameters for JointTrack Machine Learning faced certain constraints.
+The introduction of new cost functions was required to be non-conflicting with the Hamming Distance, necessitating their concurrent minimization with the Hamming Distance for all additional metrics.
+Furthermore, the algorithm was required to support parallel processing in CUDA without significantly increasing the computational burden per image.
+Lastly, maintaining the existing efficiency, characterized by the necessity for only one kernel per iteration to preserve application performance, was considered crucial.
 
-There were some constraints when exploring the addition of new cost parameters for JointTrack Machine Learning.
-It was imperative that the introduction of new cost functions did not conflict with the Hamming Distance, necessitating concurrent minimization with the Hamming Distance for all additional metrics.
-Additionally, the algorithm needed to support parallel processing in CUDA without significantly increasing the computational load per image.
-Lastly, it was crucial to maintain the existing efficiency, characterized by the requirement of only one error kernel per iteration, to preserve application performance.
+
+
+
 \subsection{Improving Error Gradient}
 For gradient enhancement, it is essential to establish notions of \emph{closeness} and \emph{farness} in the image plane, which transcends the basic \emph{hits} and \emph{misses} of the Hamming distance calculation.
 Functions that satisfy this property and provide consistent minima with the Hamming distance are defined as \textit{surface distances} \cite{reinkeCommonLimitationsImage2023,reinkeUnderstandingMetricrelatedPitfalls2023}.
@@ -66,42 +69,50 @@ Like the previous two, the Hamming distance requires sub-kernels for every sampl
   \label{fig:HD}
 \end{figure}
 
-At this point, none of the recommended distance metrics satisfy our criteria for a feasible cost function that introduces an error gradient.
-Based on the pitfalls of each of the above, the ability to pre-compute as many values as possible in order to reduce the algorithmic load during optimization seems ideal.
-In previous work, 3D distance maps were pre-computed to perform medical model-image registration \cite{lavalleeRecoveringPositionOrientation1995,zuffiModelbasedMethodReconstruction1999}.
-And so, a cost function was devised that can utilized pre-computed distance maps to introduce an error gradient, without needing to spawn multiple kernels during each iteration of optimization.
+At this point, none of the recommended distance metrics were found to satisfy the criteria for a feasible cost function capable of introducing an error gradient.
+Based on the limitations identified in each approach, the pre-computation of as many values as possible to reduce the algorithmic load during optimization was considered ideal.
+In previous studies, 3D distance maps were pre-computed to facilitate medical model-image registration \cite{lavalleeRecoveringPositionOrientation1995,zuffiModelbasedMethodReconstruction1999}.
+Consequently, a cost function was devised that utilizes pre-computed distance maps to introduce an error gradient, without the need to spawn multiple kernels during each optimization iteration.
+
+
 
 \subsection{Modified Mean Distance Cost Function}
-Initially, instead of considering the average distance across all target points – a process that necessitates spawning multiple sub-kernels – we introduce a distance map encoding the distance to the \emph{nearest point} on the target contour.
+Initially, rather than calculating the average distance across all target points – a process that would necessitate spawning multiple sub-kernels – a distance map encoding the distance to the \emph{nearest point} on the target contour was introduced.
 
 With an arbitrary image point defined as $p_{xy}$, and the target contour defined as $T$, we can express this distance map as a grid, $\displaystyle DM_{xy}(T) = \min_{t\in T}d(p_{xy},t)$, where $d(p_{xy},t)$ is any distance function that you want to use. In our case, we use the $L_{1}$-distance for efficient computation. We use OpenCV's \texttt{distanceTransform()} function for this \cite{bradskiOpenCVLibrary2000}.
 
-And then, one can express a notion of distance between the projected contour and the target contour by taking the average of the element-wise multiplication between the projection and the pre-calculated distance map (\cref{eq:DMCF}).
-This has the major benefit of only needing a single kernel for each iteration (we are only iterating once per projection and performing a multiplication and atomic addition in memory) as well as sharing a minimum with the Hamming distance.
-We can see this by noticing that $DM_{x,y}=0$ for points on the target contour, and so, if $Proj_{x,y}$ were perfectly aligned with this contour, our summation would simply be adding zeros.
+With an arbitrary image point defined as $p_{xy}$, and the target contour defined as $T$, this distance map can be expressed as a grid, $\displaystyle DM_{xy}(T) = \min_{t\in T}d(p_{xy},t)$, where $d(p_{xy},t)$ represents any chosen distance function.
+In this case, the $L_{1}$-distance was selected for efficient computation, utilizing OpenCV's \texttt{distanceTransform()} function for this purpose \cite{bradskiOpenCVLibrary2000}.
+
+Subsequently, a notion of distance between the projected contour and the target contour can be expressed by calculating the average of the element-wise multiplication between the projection and the pre-calculated distance map (\cref{eq:DMCF}).
+This approach offers the significant advantage of requiring only a single kernel for each iteration (iterating once per projection and performing a multiplication and atomic addition in memory) as well as sharing a minimum with the Hamming distance.
+This is evident by observing that $DM_{x,y}=0$ for points on the target contour, indicating that if $Proj_{x,y}$ were perfectly aligned with this contour, the summation would result in the addition of zeros.
+
 
 \begin{equation}
   \label{eq:DMCF}
   J = \dfrac{ \sum_{(x,y) \in \text{Image}} Proj_{x,y}DM_{x,y} }{\sum_{(x,y)\in \text{Image}}Proj_{x,y}}
 \end{equation}
 
-Unfortunately, the results of this endeavor do not improve the overall performance of the DIRECT algorithm in finding a global minima for rTSA implants.
-The performance is very similar to the poor performance while using the Hamming distance cost function.
+Unfortunately, the results of this endeavor did not improve the overall performance of the DIRECT algorithm in finding a global minimum for rTSA implants.
+The performance was found to be very similar to the previously poor performance when using the Hamming distance cost function.
 
 \subsection{The Psychology of Shape and Mimicking Human Operators}
 Early research in computer vision was closely tied to the psychology and neurology of human perception.
 Humans possess a remarkable ability to describe what they see, either through language or mathematical notation.
-Replicating this skill in computers programmatically continues to present significant challenges.
-Although some multi-modal speech/vision models show promise in a general sense, they lack a deep technical understanding of the visual content they process.
+The task of programmatically replicating this skill in computers continues to present significant challenges.
+Although some multi-modal speech/vision models have shown promise in a general sense, they lack a deep technical understanding of the visual content they process.
+
 
 Historically, the first attempts to mathematically describe shapes, vision, images, and curves were rooted in psychological literature \cite{attneaveInformationalAspectsVisual1954,attneaveQuantitativeStudyShape1956,koenderinkStructureImages1984,koenderinkSurfaceShapeCurvature1992}.
-This foundation seems appropriate for enhancing reverse Total Shoulder Arthroplasty (rTSA) model-image registration.
-The task essentially involves breaking down a contour into its basic shape and elemental components.
+This foundation appears appropriate for enhancing rTSA model-image registration.
+The task essentially involves decomposing a contour into its basic shape and elemental components.
 
-In the mid-1950s, psychologist Fred Attneave made significant contributions to understanding visual information redundancy and identifying regions in images and shapes that humans perceive as highly salient \cite{attneaveQuantitativeStudyShape1956,attneaveInformationalAspectsVisual1954}.
-He found that humans could recognize most images even when the shapes were significantly simplified, retaining only the most relevant features.
-Attneave pinpointed regions of high curvature, areas with a relatively high change in the normal vector, as those carrying the most information about a shape (\cref{fig:attneave}).
-He noted that most other line segments were superfluous for shape recognition.
+In the mid-1950s, psychologist Fred Attneave made significant contributions to the understanding of visual information redundancy and the identification of regions in images and shapes that humans perceive as highly salient \cite{attneaveQuantitativeStudyShape1956,attneaveInformationalAspectsVisual1954}.
+He discovered that humans could recognize most images even when the shapes were significantly simplified, retaining only the most relevant features.
+Attneave identified regions of high curvature, areas with a relatively high change in the normal vector, as carrying the most information about a shape (\cref{fig:attneave}).
+He observed that most other line segments were superfluous for shape recognition.
+
 
 \begin{figure}[h!]
   \centering
@@ -127,29 +138,36 @@ Their emphasis on the importance of accurately aligning high-curvature regions a
 
 \subsection{Developing a Cost Function for Aligning High-Curvature Regions}
 
-Informed by these findings, I aimed to develop a cost function that facilitates the alignment of high-curvature regions between the target shape and the projected shape.
-The constraints, as outlined in the previous chapter, remain: any new cost functions must reach a global minimum concurrently with the Hamming distance, and computational efficiency is paramount.
+Informed by these findings, the aim was to develop a cost function that facilitates the alignment of high-curvature regions between the target shape and the projected shape.
+The constraints, as outlined in the previous chapter, remained: any new cost functions must reach a global minimum concurrently with the Hamming distance, and computational efficiency is paramount.
 
-
-Given that there is a finite number of high-curvature regions for any given implant, and that their total count can be limited, the disadvantages associated with many surface distances seem mitigatable.
+Given that there is a finite number of high-curvature regions for any given implant, and that their total count can be limited, the disadvantages associated with many surface distances appeared mitigatable.
 This mitigation strategy would involve focusing exclusively on these high-curvature regions rather than every pixel along the surface.
-However, this approach introduces the challenge of having to spawn sub-kernels for each iteration.
+However, this approach introduced the challenge of having to spawn sub-kernels for each iteration.
 
-To circumvent this, an \emph{asymmetric surface distance}, where $d(a,b) \ne d(b,a)$, becomes necessary.
+To circumvent this, an \emph{asymmetric surface distance}, where $d(a,b) \ne d(b,a)$, became necessary.
 Such a distance metric would allow for the pre-computation of a distance map based on the target shape.
-Since this target does not change with each iteration, and memory usage is manageable due to the small number of points required for distance calculation, this approach seems promising.
-By focusing on pre-computed distances for critical high-curvature points, we can maintain computational efficiency while potentially improving the accuracy of alignment.
+Since this target does not change with each iteration, and memory usage is manageable due to the small number of points required for distance calculation, this approach seemed promising.
+By focusing on pre-computed distances for critical high-curvature points, it was possible to maintain computational efficiency while potentially improving the accuracy of alignment.
+
 
 \subsubsection{Finding Regions of High Curvature}
-The first step to implementing this cost function is determining the regions with high curvature in the contour, which is not as simple as it seems.
-To do this, one requires a contour-extraction algorithm, a discrete curvature equation, and a method for automatically selecting regions of high curvature.
+The first step in implementing this cost function involves determining the regions with high curvature in the contour, a task that is not as straightforward as it may appear.
+This requires a contour-extraction algorithm, a discrete curvature equation, and a method for automatically selecting regions of high curvature.
 
-OpenCV provides a \texttt{findContours} function \cite{bradskiOpenCVLibrary2000} that provides a pre-specified number of contiguous contour points following an algorithm proposed by Suzuki and Abe \cite{suzukiTopologicalStructuralAnalysis1985}.
-For our implementation, we extract 200 contour points.
+OpenCV's \texttt{findContours} function \cite{bradskiOpenCVLibrary2000} is utilized, which provides a pre-specified number of contiguous contour points following an algorithm proposed by Suzuki and Abe \cite{suzukiTopologicalStructuralAnalysis1985}.
+For the implementation at hand, 200 contour points are extracted.
+
 
 For a discrete implementation of curvature, we turn to Menger's Algorithm \cite{legerMengerCurvatureRectifiability1999}.
 This method defines the discrete curvature as the reciprocal of the radius of a circle fit through three points along the contour (\cref{eq:menger}).
 Typically, a window of size $t$ is defined to expand the proximity of the three points along the curvature and make the calculations more robust to noise. In our implementation, $t=18$.
+
+For a discrete implementation of curvature, Menger's Algorithm \cite{legerMengerCurvatureRectifiability1999} is implemented.
+This method defines the discrete curvature as the reciprocal of the radius of a circle fit through three points along the contour (\cref{eq:menger}).
+Typically, a window of size $t$ is defined to increase the proximity of the three points along the curvature, making the calculations more robust to noise.
+In this implementation, $t=18$.
+
 
 \begin{equation}
   \label{eq:menger}
@@ -160,15 +178,14 @@ Typically, a window of size $t$ is defined to expand the proximity of the three 
   \end{split}
 \end{equation}
 
-Because we are using a neural network segmentation as the contour, there will naturally be some noise in our contour (\cref{fig:tsa-curv}), which leads to noise in the curvature calculations.
-We removed noise by applying a 1-D Gaussian convolution to the array of curvature values using a 9-wide Gaussian kernel.
-Regions of the highest curvature will be represented as peaks along our plot (\cref{fig:tsa-curv}).
+Given the utilization of neural network segmentation for the contour, the presence of some noise in the contour (\cref{fig:tsa-curv}) is inevitable, leading to noise in the curvature calculations.
+Noise was mitigated by applying a 1-D Gaussian convolution to the array of curvature values, employing a 9-wide Gaussian kernel.
+Regions of the highest curvature were then represented as peaks along the plot (\cref{fig:tsa-curv}).
 
-To extract the regions with high curvature programmatically, we do two things.
-First, we filter out curvature values where $c_{i} \le \mu_{curvature} + 1.5\sigma_{curvature}$ to ensure that we are only selecting high curvature points.
-Then, we find the inflection points of the first derivative to find regions where our curvature moves from a positive derivative to a negative derivative, indicating the ``peak'' of that curvature region.
-The points retrieved by this algorithm are exactly the points at which the specific contour has the highest curvature.
-These points were consistent with the regions that human operators intuitively selected as high curvature regions.
+To programmatically extract regions with high curvature, two steps were undertaken.
+Initially, curvature values were filtered to exclude those where $c_{i} \le \mu_{curvature} + 1.5\sigma_{curvature}$, ensuring the selection of only high curvature points.
+Subsequently, inflection points of the first derivative were identified to locate regions where the curvature transitioned from a positive to a negative derivative, indicative of the "peak" of that curvature region.
+The points identified by this algorithm correspond precisely to the points where the specific contour exhibits the highest curvature, aligning with the regions that human operators intuitively identified as high curvature areas.
 
 
 \begin{figure}[h!]
@@ -181,12 +198,12 @@ These points were consistent with the regions that human operators intuitively s
 
 
 \subsubsection{Modified Asymmetric Surface Distance}
-Once we have established a set of keypoints representing the regions of the highest curvature, we must determine a pre-computable distance metric for creating a cost function.
-We can rule out the Hausdorff distance because we want each point to contribute to the overall distance, not just the point that has the maximum distance.
-We can rule out the Symmetric distance, because we are looking for an asymmetric function to avoid spawning sub-kernels in our iteration call.
-Thus, the Mean Surface Distance remains.
-Our modified version removes the distance calculations from the projection to the target (creating asymmetry) and only calculates distances centered at the selected keypoints.
-We pre-compute the distance maps to each keypoint using OpenCV's \texttt{distanceTransform()}, and apply element-wise multiplication to find the nearest projected point to each keypoint (\cref{eq:curv-keypoint}).
+Upon establishing a set of keypoints representing the regions of the highest curvature, the next step involved determining a pre-computable distance metric for creating a cost function.
+The Hausdorff distance was ruled out due to its focus on the maximum distance point rather than incorporating each point's contribution to the overall distance.
+The Symmetric distance was also dismissed in favor of seeking an asymmetric function to avoid the necessity of spawning sub-kernels during iteration calls.
+Thus, the Mean Surface Distance was selected.
+The modified approach eliminated distance calculations from the projection to the target (creating asymmetry) and focused only on distances centered at the selected keypoints.
+Distance maps to each keypoint were pre-computed using OpenCV's \texttt{distanceTransform()}, and element-wise multiplication was applied to identify the nearest projected point to each keypoint (\cref{eq:curv-keypoint}).
 
 \begin{equation}
   \label{eq:curv-keypoint}
@@ -200,29 +217,25 @@ We pre-compute the distance maps to each keypoint using OpenCV's \texttt{distanc
   \end{split}
 \end{equation}
 
-Unfortunately, this too yields rather poor performance.
-Despite algorithmically identifying salient features in the image and minimizing the distance of these points to the estimation, the optimization routine is still unable to accurately find a solution that matches human-supervised registration.
+Unfortunately, this approach also resulted in suboptimal performance.
+Despite algorithmically identifying salient image features and minimizing the distance of these points to the estimation, the optimization routine failed to accurately match the solution to human-supervised registration.
 
 \subsection{Discussion}
-This section presented an in-depth exploration of my efforts toward applying JointTrack Machine Learning to reverse Total Shoulder Arthroplasty implants.
-Although none of the applications offered a successful solution for rTSA model-image registration, they still showed promise in growing the overall body of knowledge in the field.
+This section delved into the exploration of applying JointTrack Machine Learning to reverse Total Shoulder Arthroplasty implants.
+Although the applications did not yield a successful solution for rTSA model-image registration, they contributed to expanding the body of knowledge in the field.
 
-First, all algorithms were rigorously tested on TKA implant registration to verify that they did not negatively impact the established performance of JTML.
-Additionally, because of the listed strengths for each of the algorithms, they might even offer stronger and more robust performance than the traditional Hamming distance for TKA implants.
-This hypothesis needs to be tested and evaluated, but, in my estimation, we would drastically improve the speed of convergence and overall accuracy of JTML with the described additions.
+First, all algorithms were rigorously tested on TKA implant registration to ensure no adverse impact on the established performance of JTML.
+Given the strengths listed for each algorithm, they might offer stronger and more robust performance than the traditional Hamming distance for TKA implants.
+This hypothesis warrants further testing and evaluation, suggesting that the described additions could significantly improve JTML's convergence speed and overall accuracy.
 
-Additionally, though none of the methods were successful in aligned rTSA implants, they still demonstrate a depth of knowledge and a valuable resource for anyone performing model-image registration.
-The thought process demonstrates a methodical and calculated approach to applying a wide array of mathematical tools to a difficult problem, which is valuable for anyone attempting a similar technical hurdle.
+Moreover, although the methods did not succeed in aligning rTSA implants, they demonstrated a comprehensive understanding and a valuable resource for model-image registration endeavors.
+The methodical and calculated approach to employing a wide array of mathematical tools to tackle a challenging problem is beneficial for anyone facing a similar technical obstacle.
 
-Lastly, the inability of any of the previous methods to accurately perform model-image registration demonstrates a deficiency in the overall pipeline.
-One deficiency might be a ceiling effect of the performance of the CNN segmentation.
-This is unlikely, as all IOU scores were in the mid- to high-90s, which is state of the art performance.
-Augmenting the neural network error functions with a surface-based metric might yield a more robust segmentation for our purposes.
-Another potential limitation is the use of Euler angles in the optimization process, as opposed to a more robust rotation parametrization, such as Quaternions.
-Due to the non-commutativity of Euler angles, we might be finding that the relative orientation of the humeral implants is at a sub-optimal region in the cost-space.
-The final possible deficiency is the shape itself.
-Compared to TKA implants, which have numerous and sharp curves and protrusions, a humeral implant is relatively ``cylindrical''.
-This would mean that minor changes in orientation would not yield large changes in the projected shape, causing optimization troubles.
+Lastly, the inability of the methods to accurately perform model-image registration highlighted potential deficiencies in the overall pipeline.
+One such deficiency could be attributed to the performance ceiling of the CNN segmentation, though this seems unlikely given the state-of-the-art IOU scores.
+Incorporating a surface-based metric into the neural network error functions might yield a more robust segmentation.
+Another limitation could be the use of Euler angles in the optimization process, where a more robust rotation parametrization, such as Quaternions, might mitigate the non-commutativity issues.
+Additionally, the shape of humeral implants compared to TKA implants, which are more ``cylindrical,'' suggests that minor orientation changes do not significantly alter the projected shape, complicating optimization efforts.
 
 Each identified deficiency represents a promising avenue for future research and development.
 The exploration of these potential areas of improvement could lead to significant advancements in model-image registration techniques.
