--- a/Andrew_Jensen_Dissertation.tex
+++ b/Andrew_Jensen_Dissertation.tex
@@ -12,6 +12,7 @@
 \usepackage[framemethod=TikZ]{mdframed} %For MD Theorem
 \usepackage[capitalise]{cleveref}
 \usepackage{mathtools}
+\usepackage{threeparttable}
 
 \creflabelformat{equation}{#2 \textup{#1}#3}
 \crefdefaultlabelformat{#2 \textup{#1}#3}
